Changes because of new username

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>j-haller</title>
+    <title>hallkyon</title>
   </head>
   <body>
-    <h1>This is j-haller</h1>
+    <h1>This is hallkyon</h1>
   </body>
 </html>
