--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>hallkyon</title>
-  </head>
-  <body>
-    <h1>This is hallkyon</h1>
-  </body>
+<!doctype html>
+<html lang="en-US">
+    <head>
+        <meta name="author" content="Jakob Haller" />
+        <meta charset="utf-8" />
+        <title>GraphNote</title>
+
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body onload="main()">
+        <svg xmlns="http://www.w3.org/2000/svg" id="canvas"></svg>
+
+        <script src="main.js"></script>
+        <script src="Vertex.js"></script>
+        <script src="force-directed-engine.js"></script>
+    </body>
 </html>
