Using ES Modules for this project

--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
         <title>GraphNote</title>
 
         <link rel="stylesheet" href="styles.css" />
+        <script type="module" src="./src/main.js"></script>
     </head>
-    <body onload="main()">
-        <svg xmlns="http://www.w3.org/2000/svg" id="canvas"></svg>
-
-        <script src="main.js"></script>
-        <script src="Vertex.js"></script>
-        <script src="force-directed-engine.js"></script>
+    <body>
+        <svg xmlns="http://www.w3.org/2000/svg" id="svg"></svg>
     </body>
 </html>
