--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <title>GraphNote</title>
 
         <link rel="stylesheet" href="styles.css" />
-        <script type="module" src="./src/main.js"></script>
+        <script type="module" src="../dist/app.js"></script>
     </head>
     <body>
         <svg xmlns="http://www.w3.org/2000/svg" id="svg"></svg>
