--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8" />
         <title>GraphNote</title>
 
-        <link rel="stylesheet" href="styles.css" />
-        <script type="module" src="../dist/app.js"></script>
+        <link rel="stylesheet" href="./public/styles.css" />
+        <script type="module" src="./public/dist/app.js"></script>
     </head>
     <body>
         <svg xmlns="http://www.w3.org/2000/svg" id="svg"></svg>
